Closed Bug 391448 Opened 17 years ago Closed 15 years ago

Force layout/dom/content code to use classinfo macros that don't use the service manager.

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jst, Assigned: peterv)

Details

Attachments

(1 file, 1 obsolete file)

There's a couple of users left (or new ones since the faster macros were added) that still use the slower macros in layour/dom/content code for getting the DOM classinfo stuff in their QI implementations. There's no reason for this, and I decided to make using the slower ones a compiler error while I was fixing these... Patch coming up.
Attachment #275862 - Flags: superreview?(peterv)
Attachment #275862 - Flags: review?(peterv)
Oh, and if someone knows of a cleaner and more informative way to trigger a compiler error in this case, please do speak up :)
Comment on attachment 275862 [details] [diff] [review]
Make NS_INTERFACE_MAP_ENTRY_DOM_CLASSINFO cause a compiler error when _IMPL_NS_LAYOUT is defined.

We could also, instead of failing to compile, rename NS_INTERFACE_MAP_ENTRY_DOM_CLASSINFO to NS_DOM_INTERFACE_MAP_ENTRY_CLASSINFO, convert the few remaining callers in the tree and change the implementation of the one macro (NS_DOM_INTERFACE_MAP_ENTRY_CLASSINFO) based on the value of _IMPL_NS_LAYOUT.
Attachment #275862 - Flags: superreview?(peterv)
Attachment #275862 - Flags: superreview+
Attachment #275862 - Flags: review?(peterv)
Attachment #275862 - Flags: review+
Attached patch v2Splinter Review
Does what I proposed in comment 2. One issue is that we rely on all of content/dom/layout to have _IMPL_NS_LAYOUT defined for this to be effective, which is not the case. I made sure that all the directories where we use the DOMCI macro do have it set now.
Assignee: jst → peterv
Attachment #275862 - Attachment is obsolete: true
Status: NEW → ASSIGNED
Attachment #362097 - Flags: superreview?(jst)
Attachment #362097 - Flags: review?(jst)
Comment on attachment 362097 [details] [diff] [review]
v2

Looks good. r+sr=jst
Attachment #362097 - Flags: superreview?(jst)
Attachment #362097 - Flags: superreview+
Attachment #362097 - Flags: review?(jst)
Attachment #362097 - Flags: review+
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: