Fix for bug 391448 (Force layout/dom/content code to use classinfo macros that don't use the service manager.). r/sr=jst.